# Rust-Book-Practice

./: .gitignore  README.md
OOP/src/: lib.rs  main.rs
adder/src/: lib.rs
adder/tests/: integration_test.rs
cargo_crates/: Cargo.toml
cargo_crates/src/: lib.rs  main.rs
closures/: Cargo.toml
closures/src/: main.rs
collections/src/: main.rs
concurrency/src/: main.rs
enumerations/src/: main.rs
error_handling/src/: main.rs
external_libs/: Cargo.toml
external_libs/src/: main.rs
generic-types/src/: main.rs
guessing_game/src/: main.rs
lifetimes/src/: main.rs
match_control_flow/src/: main.rs
minigrep/src/: lib.rs  main.rs
minigrep/src/config/: mod.rs
minigrep/src/run/: mod.rs
minigrep/src/search/: mod.rs  search.rs  search_case_insensitive.rs
minigrep/src/utils/: exit_with_error.rs  mod.rs
minigrep/tests/: integration_tests.rs
modules/names/: Cargo.toml
modules/names/src/: lib.rs
modules/names/src/front_of_house/: hosting.rs
modules/names/src/your_module/: mod.rs
modules/restaurant/src/: lib.rs
modules/restaurant/src/auth_utils/: mod.rs
onwnershiping/: Cargo.toml
onwnershiping/src/: main.rs
smart_pointers/src/: main.rs
structurs/: Cargo.toml
structurs/src/: main.rs
tokio/: Cargo.toml
tokio/src/: main.rs
traits/src/: main.rs
variables/src/: main.rs
web-server/src/: lib.rs  main.rs
