[package]
name = "cargo_crates_ihor_milevskyi"
version = "0.1.1"
authors = ["Ihor Milevskyi"]
edition = "2021"
description = "Firts cargo lib by Ihor Milevskyi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
